correction de l'overlap entre les icons et le texte

--- a/src/Atos/Worldline/Fm/Integration/Ucs/EventFlowAnalyserBundle/Resources/assets/compass/stylesheets/base.css
+++ b/src/Atos/Worldline/Fm/Integration/Ucs/EventFlowAnalyserBundle/Resources/assets/compass/stylesheets/base.css
@@ -27,74 +27,12 @@
     box-sizing: border-box;
 }
 
-/* line 29, ../sass/base.scss */
-.grid {
-    background: white;
-    margin: 0 0 10px 0;
-}
-
-/* line 33, ../sass/base.scss */
-.grid:after {
-    /* Or @extend clearfix */
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* line 41, ../sass/base.scss */
-[class*='col-'] {
-    float: left;
-    padding-right: 10px;
-}
-
-/* line 44, ../sass/base.scss */
-.grid [class*='col-']:last-of-type {
-    padding-right: 0;
-}
-
-/* line 48, ../sass/base.scss */
-.col-2-3 {
-    width: 66.66%;
-}
-
-/* line 51, ../sass/base.scss */
-.col-1-3 {
-    width: 33.33%;
-}
-
-/* line 54, ../sass/base.scss */
-.col-1-2 {
-    width: 50%;
-}
-
-/* line 57, ../sass/base.scss */
-.col-1-4 {
-    width: 25%;
-}
-
-/* line 60, ../sass/base.scss */
-.col-1-8 {
-    width: 12.5%;
-}
-
-/* line 64, ../sass/base.scss */
-.module {
-    padding: 10px;
-    background: #fff;
-}
-
-/* Opt-in outside padding */
-/* line 70, ../sass/base.scss */
-.grid-pad {
-    padding: 10px 0 10px 10px;
-}
-
-/* line 72, ../sass/base.scss */
-.grid-pad [class*='col-']:last-of-type {
-    padding-right: 10px;
-}
-
-/* line 78, ../sass/base.scss */
-.grid h3 {
+/* line 27, ../sass/base.scss */
+.center {
     text-align: center;
+}
+
+/* line 31, ../sass/base.scss */
+[class^="icon-"], [class*=" icon-"] {
+    padding-left: 18px;
 }
